--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -332,8 +332,14 @@ select:-webkit-autofill:focus {
 }
 
 .ant-pro-sider-logo {
-  h1 {
-    margin-left: 5px !important;
+  .title {
+    height: 32px;
+    margin: 0 5px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 32px;
+    vertical-align: middle;
+    animation: pro-layout-title-hide 0.3s;
   }
 
   img {
